Fix SPI discovery and class generation on JDK 9+
GeoWave does not run on any JDK above 8. CI runs JDK 8, so none of this
surfaced. On JDK 17, BasicDataTypeAdapterTest errors 9/9 and core/cli
errors 15/45 on a clean checkout.

Three independent causes:

SPIServiceRegistry extended javax.imageio.spi.ServiceRegistry, whose
constructor calls checkClassAllowed and rejects any non-ImageIO service
with "<X> is not an ImageIO SPI class". That breaks every SPI lookup in
GeoWave -- field serializers, the statistics registry, the index
registry. The class only used ServiceRegistry for that constructor and
for the static lookupProviders, which is just ServiceLoader underneath,
so it now uses ServiceLoader directly. The existing constructors are
kept as ignored-argument no-ops so no call site changes; tightening that
API is left for 3.0.

JCommanderTranslationMap used the deprecated no-arg CtClass.toClass(),
so javassist reflected into ClassLoader.defineClass and threw
InaccessibleObjectException. Javassist needs a lookup anchored in the
generated classes' own package, and nothing lived in
org.locationtech.geowave.core.cli.parsed to supply one, hence the new
GeneratedClassAnchor. Bumping javassist alone does not fix this.

JCommander 1.81 calls setAccessible on java.lang members when asked to
introspect a java.lang class; 1.82 does not. The one test still failing
afterwards passed a raw String as a command object, which made
JCommander introspect java.lang.String itself -- real command objects
are always parameter-bearing beans, so the test now uses one.

core/index, core/cli and core/store tests pass on JDK 17 with this.